--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -7,7 +7,7 @@ env:
   TF_CLOUD_ORGANIZATION: "akira128"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "github-terraform-interview"
-  CONFIG_DIRECTORY: "./"
+  CONFIG_DIRECTORY: "./task01"
 
 jobs:
   terraform:
